[gd_scene load_steps=4 format=3 uid="uid://bd7ax2capp02r"]

[ext_resource type="Script" uid="uid://x7eoytufjjkc" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://cde227ahrbokb" path="res://sprites/menus/main_menu.jpg" id="2_ekxnf"]

[sub_resource type="Theme" id="Theme_vue75"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_vue75")
script = ExtResource("1_l6cm7")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 300.0
offset_bottom = 200.0
texture = ExtResource("2_ekxnf")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 81.0
offset_top = 46.0
offset_right = 231.0
offset_bottom = 156.0

[node name="ButtonStart" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "start"

[node name="ButtonOptions" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "options"

[node name="ButtonExit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "exit"
